# Media-Codec-Resample

./: README.md
G711/: CMakeLists.txt  example.c
fdk-aac/: fdk_aac2pcm_decode.cpp
fdk_aac/: README.md  fdk_pcm2aac_encode.cpp
libde265/: libde265_decode.cpp
libyuv/: example.cpp
media/: 352_288.h264  352_288.h265  audio_44100_2_16.aac  readme.txt
openh264/: openh264_decode.cpp  openh264_encode.cpp  readme.txt
speexdsp/: resample.cpp
x264/: README.md  x264_yuv2h264.cpp
x265/: readme.txt  x265_yuv2h265.cpp
